--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <section class="about">
         <h2>Sobre o Autor</h2>
-        <p>Com anos de experiência na culinária e uma paixão por panificação, o autor deste eBook traz uma abordagem prática e acessível. Aprenda com um especialista que já ajudou milhares de pessoas a descobrir a arte de fazer pão em casa.</p>
+        <p>Apaixonado por panificação, o autor deste eBook traz uma abordagem prática e acessível. Aprenda com um especialista que já ajudou milhares de pessoas a descobrir a arte de fazer pão em casa.</p>
         <p>Além disso, você terá acesso a receitas exclusivas que não estão disponíveis em nenhum outro lugar!</p>
     </section>
 
